First attempt of fix for the bug 810