@@ -32,6 +32,8 @@ package jogamp.nativewindow;
 import java.security.AccessController;
 import java.security.PrivilegedAction;
 
+import javax.media.opengl.GLProfile;
+
 import com.jogamp.common.jvm.JNILibLoaderBase;
 import com.jogamp.common.os.Platform;
 import com.jogamp.common.util.cache.TempJarCache;
@@ -44,11 +46,9 @@ public class NWJNILibLoader extends JNILibLoaderBase {
         Platform.initSingleton();
         final String libName = "nativewindow_"+ossuffix ;
         if(TempJarCache.isInitialized() && null == TempJarCache.findLibrary(libName)) {
-            // either: [jogl-all.jar, jogl-all-noawt.jar, jogl-all-mobile.jar] -> jogl-all-natives-<os.and.arch>.jar
-            // or:     nativewindow-core.jar                                   -> nativewindow-natives-<os.and.arch>.jar
-            addNativeJarLibs(new Class<?>[] { NWJNILibLoader.class }, "-all", new String[] { "-noawt", "-mobile", "-core" } );
+            GLProfile.addNativeJarLibs(new Class<?>[] { NWJNILibLoader.class });
         }
-        return new Boolean(loadLibrary(libName, false, NWJNILibLoader.class.getClassLoader()));
+        return Boolean.valueOf(loadLibrary(libName, false, NWJNILibLoader.class.getClassLoader()));
       }
     }).booleanValue();
   }
